# moranote-markdown-editor

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  文档.md  设计文档.md
.github/workflows/: release.yml
assets/app-icons/: moranote.icns
assets/styles/: default.css
assets/templates/: preview.html
assets/themes/morandigarden/: ATTRIBUTION.md  morandigarden.css
assets/windows/: app.rc
examples/: generate_icon.rs
scripts/: build-dmg.sh  build-windows.ps1  run-macos-app.sh
src/: actions.rs  app.rs  export.rs  main.rs  model.rs  workspace.rs
src/platform/: macos.rs  mod.rs
src/preview/: mod.rs  renderer.rs
src/settings/: config.rs  mod.rs
