[package]
name = "moranote"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["webview", "tree-sitter-languages"] }
gpui-component-assets = "0.5.1"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
anyhow = "1"
rfd = "0.14"
open = "5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["std", "NSUserDefaults", "NSString"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
